# Deform

./: CMakeLists.txt  Deform Engine.sln  Deform Engine.vcxproj  Deform Engine.vcxproj.filters  editor_trace.txt  imgui.ini
Deform Engine/x64/Debug/: Deform Engine.exe.recipe  unity_413ZI7J2ZEP67NUA.cpp  vc145.idb
Deform Engine/x64/Release/: Deform Engine.exe.recipe
Editor/: Editor.vcxproj  Editor.vcxproj.filters  imgui.ini  imgui_debug.txt
Editor/assets/shaders/: sky.hlsl
Editor/src/: Editor.h  main.cpp
Editor/src/EditorUIComponents/: Console.cpp  Hierarchy.cpp  Inspector.cpp  MenuBar.cpp
Engine/: .gitignore  Deform Engine.sln  Deform Engine.vcxproj  Deform Engine.vcxproj.filters
Engine/lib/: CMakeLists.txt  Torque_postBuild.cmake
Engine/lib/collada/: CMakeLists.txt
Engine/lib/convexMath/: CMakeLists.txt
Engine/lib/lpng/: CMakeLists.txt
Engine/lib/openal-soft/: CMakeLists.txt
Engine/lib/tinyxml2/: CMakeLists.txt
Engine/source/: CMakeLists.txt
Engine/source/T3D/: Scene.cpp  Scene.h  SceneGroup.cpp  SceneGroup.h  SubScene.cpp  SubScene.h  accumulationVolume.cpp  accumulationVolume.h  aiPlayer.cpp  aiPlayer.h  camera.cpp  convexShape.cpp  convexShape.h  debris.cpp  debris.h  gameFunctions.cpp  gameMode.cpp  gameMode.h  gameTSCtrl.cpp  gameTSCtrl.h  groundPlane.cpp  (+39 more)
Engine/src/: Engine.h
Tools/CMake/: torqueConfig.h.in  torqueMacOSconfigs.cmake  torque_configs.cmake  torque_macros.cmake
Window Test/: Window Test.vcxproj  Window Test.vcxproj.filters  main.cpp
src/: init.h  main.cpp
src/Editor/: Editor.h
src/graphics/: Window.cpp  Window.h
(+1046 files in other folders)
